--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,23 @@
   <artifactId>APITestingRestassured</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
+  
 
   <name>APITestingRestassured</name>
   <url>http://maven.apache.org</url>
 
   <properties>
+  <property>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </property>
+  
+   <property>
+    <maven.compiler.source>6.0</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    </property>
+    
   </properties>
-
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -152,7 +161,26 @@
     <artifactId>json-simple</artifactId>
     <version>1.1.1</version>
 </dependency>
+<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>servlet-api</artifactId>
+    <version>3.0-alpha-1</version>
+    <scope>provided</scope>
+</dependency>
 
 				
   </dependencies>
+ <build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>2.3.1</version>
+            <configuration>
+                <source>6.0</source>
+                <target>1.6</target>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 </project>
